-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0 RC1, 5.1.0
-
Mac 10.7
-
-
53280989fb66cbaaa07c25fc0f23ec07dd00d734
Install the latest Qt5.1.0 opensource Mac installer (build number 35). Set Qt into PATH and run qmake for some examples.
Error: some project warnings are printed into command line:
digia@sdk-mac:~/Qt5.1.0/5.1.0-beta1/clang_64/examples/widgets/mainwindows/application$ qmake
Project WARNING: No .qmake.cache is present. This significantly slows down qmake with this makespec.
Project WARNING: Call 'cache()' in the top-level project file to rectify this problem.